--- a/src/html/datastatistics.html
+++ b/src/html/datastatistics.html
@@ -297,9 +297,9 @@
                       </div>
                       <h3 class="mt0">12</h3>
                       <p class="text-muted">今日流失学员</p>
-                      <span class="text-danger">30天前过期且未续费的学员</span>
                     </div>
                   </div>
+                  <p class="text-center"><span class="text-danger">30天前过期且未续费的学员</span></p>
                     </a>
                 </div>
                 <div class="col-lg-3">
@@ -311,9 +311,9 @@
                       </div>
                       <h3 class="mt0">388</h3>
                       <p class="text-muted">今日体验转化</p>
-                      <p class="text-danger">体验账号今日完成续费</p>
                     </div>
                   </div>
+                  <p class="text-center"><span class="text-danger">体验账号今日完成续费</span></p>
                     </a>
                 </div>
 
