--- a/src/html/mallmanagement_commodity.html
+++ b/src/html/mallmanagement_commodity.html
@@ -362,7 +362,11 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
-
+  <!-- <script src="../js/vendor/jquery-ui/ui/widget.js"></script>
+  <script src="../js/vendor/blueimp-tmpl/js/tmpl.js"></script>
+  <script src="../js/vendor/blueimp-load-image/js/load-image.all.min.js"></script>
+  <script src="../js/vendor/blueimp-file-upload/js/jquery.fileupload.js"></script>
+  <script src="../js/vendor/blueimp-file-upload/js/jquery.fileupload-image.js"></script> -->
 
 
   <script src="../js/mallmanagement.js"></script>
