--- a/src/html/teachermanagement_list.html
+++ b/src/html/teachermanagement_list.html
@@ -193,7 +193,7 @@
                       </div>
                     </div>
                     <div class="col-sm-9">
-                      <button type="button" class="btn btn-primary">创建教师</button>
+                      <button type="button" class="btn btn-primary jq-change">创建教师</button>
                     </div>
                   </div>
                 </form>
@@ -211,6 +211,11 @@
                         <th>最近登陆</th>
                         <th class="sorting">近30天平均每日登陆(次)</th>
                         <th>教师姓名</th>
+                        <th>教师手机</th>
+                        <th>学生总数</th>
+                        <th>付费学生</th>
+                        <th>教师当前学币</th>
+                        <th>教师累计学币</th>
                         <th>操作</th>
                       </tr>
                     </thead>
@@ -222,6 +227,11 @@
                         <td>今天</td>
                         <td>3.1</td>
                         <td>姓名姓名</td>
+                        <td>18000000000</td>
+                        <td>9999</td>
+                        <td>9999</td>
+                        <td>9999</td>
+                        <td>9999</td>
                         <td>
                           <a class="btn btn-primary jq-stop" href="javascript:;">停用账号</a>
                           <a class="btn btn-primary jq-check" href="javascript:;">查看班级</a>
@@ -236,6 +246,11 @@
                         <td>今天</td>
                         <td>3.1</td>
                         <td>姓名姓名</td>
+                        <td>18000000000</td>
+                        <td>9999</td>
+                        <td>9999</td>
+                        <td>9999</td>
+                        <td>9999</td>
                         <td>
                           <a class="btn btn-primary jq-stop" href="javascript:;">停用账号</a>
                           <a class="btn btn-primary jq-check" href="javascript:;">查看班级</a>
@@ -244,13 +259,23 @@
                         </td>
                       </tr>
                       <tr>
+                        <td>A000001</td>
                         <td>2018-01-01 22:22:22</td>
-                        <td>学校余额</td>
-                        <td class="text-danger">减少</td>
-                        <td class="text-danger">10000</td>
-                        <td>30天充值</td>
-                        <td>姓名（18000000000）</td>
-                        <td>老师-姓名（A000000）</td>
+                        <td>停用</td>
+                        <td>今天</td>
+                        <td>3.1</td>
+                        <td>姓名姓名</td>
+                        <td>18000000000</td>
+                        <td>9999</td>
+                        <td>9999</td>
+                        <td>9999</td>
+                        <td>9999</td>
+                        <td>
+                          <a class="btn btn-primary jq-stop" href="javascript:;">停用账号</a>
+                          <a class="btn btn-primary jq-check" href="javascript:;">查看班级</a>
+                          <a class="btn btn-primary jq-change" href="javascript:;">修改资料</a>
+                          <a class="btn btn-primary jq-pwd" href="javascript:;">重置密码</a>
+                        </td>
                       </tr>
                     </tbody>
                   </table>
@@ -331,7 +356,7 @@
   <script src="../js/app.js"></script>
   <!-- endbuild -->
 
-
+  <script src="../js/teachermanagement.js"></script>
 
 
 
