--- a/src/html/teachermanagement_sales.html
+++ b/src/html/teachermanagement_sales.html
@@ -178,7 +178,142 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            这里是内容
+            <!-- START panel-->
+            <div class="panel-default">
+              <!-- START table-responsive-->
+              <div class="panel-heading">
+                <div class="table-responsive">
+                  <table id="" class="table table-bordered table-hover">
+                    <thead>
+                      <tr>
+                        <th>教师编号</th>
+                        <th>教师姓名</th>
+                        <th>历史总充值</th>
+                        <th>当前余额</th>
+                        <th class="sorting">付费学生总数</th>
+                        <th class="sorting">历史付费学生数</th>
+                        <th class="sorting">总过期学员</th>
+                        <th class="sorting">本月续费人数</th>
+                        <th class="sorting">本月总充值（元）</th>
+                        <th class="sorting">本月30天续费（次）</th>
+                        <th class="sorting">本月60天续费（次）</th>
+                        <th class="sorting">本月90天续费（次）</th>
+                        <th class="sorting">本月6个月续费（次）</th>
+                        <th class="sorting">本月1年续费（次）</th>
+                        <th class="sorting">本月2年续费（次）</th>
+                        <th class="sorting">本月3年续费（次）</th>
+                        <th>操作</th>
+                      </tr>
+                    </thead>
+                    <tbody id="designerlist">
+                      <tr>
+                        <td>2018年06月</td>
+                        <td>教师姓名</td>
+                        <td class="text-danger">9999999</td>
+                        <td class="text-danger">9999999</td>
+                        <td>+9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>+9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>+9999999</td>
+                        <td>9999999</td>
+                        <td>
+                          <a class="btn btn-primary" href="./teachermanagement_sales_info.html">余额明细</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>2018年06月</td>
+                        <td>教师姓名</td>
+                        <td class="text-danger">9999999</td>
+                        <td class="text-danger">9999999</td>
+                        <td>+9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>+9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>+9999999</td>
+                        <td>9999999</td>
+                        <td>
+                          <a class="btn btn-primary" href="./teachermanagement_sales_info.html">余额明细</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>2018年06月</td>
+                        <td>教师姓名</td>
+                        <td class="text-danger">9999999</td>
+                        <td class="text-danger">9999999</td>
+                        <td>+9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>+9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>+9999999</td>
+                        <td>9999999</td>
+                        <td>
+                          <a class="btn btn-primary" href="./teachermanagement_sales_info.html">余额明细</a>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+
+                <!-- build:pages -->
+                <!-- 分页 -->
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>  
+                <!-- endbuild -->
+
+
+
+
+
+
+
+
+
+
+
+              </div>
+            </div>
           </div>
         </div>
       </div>
