去掉 class="sorting"

--- a/src/html/salesdata.html
+++ b/src/html/salesdata.html
@@ -204,11 +204,11 @@
                       <tr>
                         <th>月份</th>
                         <th>月末余额</th>
-                        <th class="sorting">学校储值情况</th>
-                        <th class="sorting">本月续费人数</th>
-                        <th class="sorting">本月总充值（元）</th>
-                        <th class="sorting">本月30天续费（次）</th>
-                        <th class="sorting">本月60天续费</th>
+                        <th>学校储值情况</th>
+                        <th>本月续费人数</th>
+                        <th>本月总充值（元）</th>
+                        <th>本月30天续费（次）</th>
+                        <th>本月60天续费</th>
                         <th>操作</th>
                       </tr>
                     </thead>
