--- a/src/html/teachermanagement_list.html
+++ b/src/html/teachermanagement_list.html
@@ -206,10 +206,10 @@
                     <thead>
                       <tr>
                         <th>教师编号</th>
-                        <th class="sorting">创建时间</th>
+                        <th>创建时间</th>
                         <th>状态</th>
                         <th>最近登陆</th>
-                        <th class="sorting">近30天平均每日登陆(次)</th>
+                        <th>近30天平均每日登陆(次)</th>
                         <th>教师姓名</th>
                         <th>教师手机</th>
                         <th>学生总数</th>
