--- a/src/html/teachermanagement_sales.html
+++ b/src/html/teachermanagement_sales.html
@@ -190,18 +190,18 @@
                         <th>教师姓名</th>
                         <th>历史总充值</th>
                         <th>当前余额</th>
-                        <th class="sorting">付费学生总数</th>
-                        <th class="sorting">历史付费学生数</th>
-                        <th class="sorting">总过期学员</th>
-                        <th class="sorting">本月续费人数</th>
-                        <th class="sorting">本月总充值（元）</th>
-                        <th class="sorting">本月30天续费（次）</th>
-                        <th class="sorting">本月60天续费（次）</th>
-                        <th class="sorting">本月90天续费（次）</th>
-                        <th class="sorting">本月6个月续费（次）</th>
-                        <th class="sorting">本月1年续费（次）</th>
-                        <th class="sorting">本月2年续费（次）</th>
-                        <th class="sorting">本月3年续费（次）</th>
+                        <th>付费学生总数</th>
+                        <th>历史付费学生数</th>
+                        <th>总过期学员</th>
+                        <th>本月续费人数</th>
+                        <th>本月总充值（元）</th>
+                        <th>本月30天续费（次）</th>
+                        <th>本月60天续费（次）</th>
+                        <th>本月90天续费（次）</th>
+                        <th>本月6个月续费（次）</th>
+                        <th>本月1年续费（次）</th>
+                        <th>本月2年续费（次）</th>
+                        <th>本月3年续费（次）</th>
                         <th>操作</th>
                       </tr>
                     </thead>
