--- a/src/html/teachermanagement_sales_info.html
+++ b/src/html/teachermanagement_sales_info.html
@@ -195,20 +195,20 @@
                     <thead>
                       <tr>
                         <th>月份</th>
-                        <th class="sorting">本月续费人数</th>
-                        <th class="sorting">本月总充值（元）</th>
-                        <th class="sorting">本月30天续费（次）</th>
-                        <th class="sorting">本月60天续费（次）</th>
-                        <th class="sorting">本月90天续费（次）</th>
-                        <th class="sorting">本月6个月续费（次）</th>
-                        <th class="sorting">本月1年续费（次）</th>
-                        <th class="sorting">本月2年续费（次）</th>
-                        <th class="sorting">本月3年续费（次）</th>
-                        <th class="sorting">月末付费学生总数</th>
-                        <th class="sorting">过期人数</th>
-                        <th class="sorting">流失学员</th>
-                        <th class="sorting">转化人数</th>
-                        <th class="sorting">转化率</th>
+                        <th>本月续费人数</th>
+                        <th>本月总充值（元）</th>
+                        <th>本月30天续费（次）</th>
+                        <th>本月60天续费（次）</th>
+                        <th>本月90天续费（次）</th>
+                        <th>本月6个月续费（次）</th>
+                        <th>本月1年续费（次）</th>
+                        <th>本月2年续费（次）</th>
+                        <th>本月3年续费（次）</th>
+                        <th>月末付费学生总数</th>
+                        <th>过期人数</th>
+                        <th>流失学员</th>
+                        <th>转化人数</th>
+                        <th>转化率</th>
                       </tr>
                     </thead>
                     <tbody id="designerlist">
