--- a/src/html/datastatistics_changetoday.html
+++ b/src/html/datastatistics_changetoday.html
@@ -217,8 +217,8 @@
                         <th>昵称</th>
                         <th>所属教师</th>
                         <th>所属班级</th>
-                        <th class="sorting">有效期</th>
-                        <th class="sorting">到期日期</th>
+                        <th>有效期</th>
+                        <th>到期日期</th>
                         <th>当前学员组</th>
                         <th>操作</th>
                       </tr>
