--- a/src/html/teachermanagement_sales.html
+++ b/src/html/teachermanagement_sales.html
@@ -53,7 +53,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -224,14 +226,149 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            这里是内容
-            <a href="teachermanagement_sales_info.html" class="btn btn-info">详细报表</a>
+            <div class="panel-default">
+              <div class="panel-heading">
+                <form class="text-right form-lineH">
+                  <div class="row">
+                    <div class="form-group col-sm-3">
+                      <label class="col-sm-4">教师：</label>
+                      <div class="col-sm-8">
+                        <input type="tel" name="" class="form-control" placeholder="请输入教师编号或教师姓名">
+                      </div>
+                    </div>
+                    <div class="col-sm-1">
+                      <button type="button" class="btn btn-primary">搜索</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <!-- START table-responsive-->
+              <div class="panel-heading">
+                <div class="table-responsive">
+                  <table id="" class="table table-bordered table-hover">
+                    <thead>
+                      <tr>
+                        <th>教师编号</th>
+                        <th>教师名称</th>
+                        <th>历史总充值</th>
+                        <th>当前余额</th>
+                        <th>付费学生总数</th>
+                        <th>历史付费学生数</th>
+                        <th>总过期学员</th>
+                        <th>本月续费人数</th>
+                        <th>本月总充值（元）</th>
+                        <th>本月30天续费（次）</th>
+                        <th>本月60天续费（次）</th>
+                        <th>本月90天续费（次）</th>
+                        <th>本月6个月续费（次）</th>
+                        <th>本月1年续费（次）</th>
+                        <th>本月2年续费（次）</th>
+                        <th>本月3年续费（次）</th>
+                        <th>本月流失学员</th>
+                        <th>历史转化人数</th>
+                        <th>总转化率</th>
+                        <th>操作</th>
+                      </tr>
+                    </thead>
+                    <tbody id="designerlist">
+                      <tr>
+                        <td>A000001</td>
+                        <td>名字名字</td>
+                        <td class="text-danger">9999999</td>
+                        <td class="text-danger">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td>9999</td>
+                        <td>9999</td>
+                        <td>100%</td>
+                        <td>
+                          <a class="btn btn-primary" href="teachermanagement_sales_info.html">详细报表</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>A000001</td>
+                        <td>名字名字</td>
+                        <td class="text-danger">9999999</td>
+                        <td class="text-danger">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td>9999</td>
+                        <td>9999</td>
+                        <td>100%</td>
+                        <td>
+                          <a class="btn btn-primary" href="teachermanagement_sales_info.html">详细报表</a>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+
+                <!-- build:pages -->
+                <!-- 分页 -->
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- endbuild -->
+
+
+
+
+
+
+
+
+
+
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- 主要内容END -->
-    
+
     <!-- build:foot -->
     <footer>
       <span>&copy; 2018 - 智厢逢</span>
