--- a/src/html/teachermanagement_sales_info.html
+++ b/src/html/teachermanagement_sales_info.html
@@ -53,7 +53,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -221,29 +223,142 @@
       <div class="content-wrapper">
         <div class="content-heading">
           【教师名】的详细报表
+          <button class="pull-right btn btn-primary" type="button">返回</button>
           <ol class="breadcrumb">
-            <li><a href="#">教师管理</a></li>
-            <li><a href="#">销售数据</a></li>
+            <li>
+              <a href="#">教师管理</a>
+            </li>
+            <li>
+              <a href="#">销售数据</a>
+            </li>
             <li class="active">详细报表</li>
           </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            这里是内容
+            <!-- START panel-->
+            <div class="panel-default">
+              <!-- START table-responsive-->
+              <div class="panel-heading">
+                <div class="table-responsive">
+                  <table id="" class="table table-bordered table-hover">
+                    <thead>
+                      <tr>
+                        <th>月份</th>
+                        <th>本月续费人数</th>
+                        <th>本月总充值（元）</th>
+                        <th>本月30天续费（次）</th>
+                        <th>本月60天续费（次）</th>
+                        <th>本月90天续费（次）</th>
+                        <th>本月6个月续费（次）</th>
+                        <th>本月1年续费（次）</th>
+                        <th>本月2年续费（次）</th>
+                        <th>本月3年续费（次）</th>
+                        <th>月末付费学生总数</th>
+                        <th>过期人数</th>
+                        <th>流失学员</th>
+                        <th>转化人数</th>
+                        <th>转化率</th>
+                      </tr>
+                    </thead>
+                    <tbody id="designerlist">
+                      <tr>
+                        <td>2018年06月</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
+                      </tr>
+                      <tr>
+                        <td>2018年06月</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
+                      </tr>
+                      <tr>
+                        <td>2018年06月</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td class="text-warning">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+
+                <!-- build:pages -->
+                <!-- 分页 -->
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- endbuild -->
+
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- 主要内容END -->
-    
+
     <!-- build:foot -->
     <footer>
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
-
-
-
 
 
   </div>
