--- a/src/html/datastatistics.html
+++ b/src/html/datastatistics.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
-
+  <link rel="stylesheet" href="../css/main_xc.css">
 
 
 
@@ -55,7 +55,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -235,47 +237,68 @@
           数据统计
         </div>
         <div class="row">
-          <div class="col-lg-4">
-            <div class="panel widget bg-green">
-              <div class="row row-table">
-                <div class="col-xs-4 text-center bg-green-dark pv-lg">
-                  <em class="icon-people fa-3x"></em>
-                </div>
-                <div class="col-xs-8 pv-lg">
-                  <div class="h2 mt0">66
-                    <small>人</small>
+          <div class="col-lg-3">
+            <a class="nodecation" href="./datastatistics_all.html">
+              <div class="panel widget bg-green">
+                <div class="row row-table">
+                  <div class="col-xs-4 text-center bg-green-dark pv-lg">
+                    <em class="icon-people fa-3x"></em>
                   </div>
-                  <div class="text-uppercase">我的学员</div>
+                  <div class="col-xs-8 pv-lg">
+                    <div class="h2 mt0">66
+                      <small>人</small>
+                    </div>
+                    <div class="text-uppercase">全部有效学员</div>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
-          <div class="col-lg-4">
-            <div class="panel widget bg-warning">
-              <div class="row row-table">
-                <div class="col-xs-4 text-center bg-warning-dark pv-lg">
-                  <em class="icon-logout fa-3x"></em>
-                </div>
-                <div class="col-xs-8 pv-lg">
-                  <div class="h2 mt0">5
-                    <small>人</small>
+          <div class="col-lg-3">
+            <a class="nodecation" href="./datastatistics_due.html">
+              <div class="panel widget bg-warning">
+                <div class="row row-table">
+                  <div class="col-xs-4 text-center bg-warning-dark pv-lg">
+                    <em class="icon-logout fa-3x"></em>
                   </div>
-                  <div class="text-uppercase">即将到期</div>
+                  <div class="col-xs-8 pv-lg">
+                    <div class="h2 mt0">5
+                      <small>人</small>
+                    </div>
+                    <div class="text-uppercase">即将到期</div>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
-          <div class="col-lg-4">
-            <div class="panel widget bg-primary">
+          <div class="col-lg-3">
+            <a class="nodecation" href="./datastatistics_taste.html">
+              <div class="panel widget bg-primary">
+                <div class="row row-table">
+                  <div class="col-xs-4 text-center bg-primary-dark pv-lg">
+                    <em class="icon-user-follow fa-3x"></em>
+                  </div>
+                  <div class="col-xs-8 pv-lg">
+                    <div class="h2 mt0">100
+                      <small>人</small>
+                    </div>
+                    <div class="text-uppercase">体验学员</div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-3">
+            <div class="panel widget bg-purple">
               <div class="row row-table">
-                <div class="col-xs-4 text-center bg-primary-dark pv-lg">
+                <div class="col-xs-4 text-center bg-purple-dark pv-lg">
                   <em class="icon-user-follow fa-3x"></em>
                 </div>
                 <div class="col-xs-8 pv-lg">
-                  <div class="h2 mt0">100
+                  <div class="h2 mt0">1000
                     <small>人</small>
                   </div>
-                  <div class="text-uppercase">体验学员</div>
+                  <div class="text-uppercase">今日新注册</div>
                 </div>
               </div>
             </div>
@@ -285,52 +308,66 @@
         <div class="row">
           <div class="col-lg-12">
             <div id="" class="panel panel-primary">
-              <div class="panel-heading">今日学况</div>
+              <div class="panel-heading">续费情况</div>
               <div class="panel-body">
                 <div class="col-lg-3 col-sm-6">
-                  <div class="panel widget">
-                    <div class="panel-body text-center">
-                      <div class="text-right text-muted">
-                        <em class="icon-user-unfollow fa-2x"></em>
+                  <a class="nodecation normalcolor" href="./datastatistics_renewtoday.html">
+                    <div class="panel widget">
+                      <div class="panel-body text-center">
+                        <div class="text-right text-muted">
+                          <em class="icon-user-unfollow fa-2x"></em>
+                        </div>
+                        <h3 class="mt0">33</h3>
+                        <p class="text-muted">今日续费学员</p>
                       </div>
-                      <h3 class="mt0">33</h3>
-                      <p class="text-muted">未学人数</p>
                     </div>
-                  </div>
+                  </a>
                 </div>
 
                 <div class="col-lg-3 col-sm-6">
-                  <div class="panel widget">
-                    <div class="panel-body text-center">
-                      <div class="text-right text-muted">
-                        <em class="icon-clock fa-2x"></em>
+                  <a class="nodecation normalcolor" href="./datastatistics_renewlengthtoday.html">
+                    <div class="panel widget">
+                      <div class="panel-body text-center">
+                        <div class="text-right text-muted">
+                          <em class="icon-clock fa-2x"></em>
+                        </div>
+                        <h3 class="mt0">03:30:12</h3>
+                        <p class="text-muted">今日续费时长</p>
                       </div>
-                      <h3 class="mt0">03:30:12</h3>
-                      <p class="text-muted">人均有效学习时长</p>
                     </div>
-                  </div>
+                  </a>
                 </div>
                 <div class="col-lg-3 col-sm-6">
-                  <div class="panel widget">
-                    <div class="panel-body text-center">
-                      <div class="text-right text-muted">
-                        <em class="fa fa-star-half-o fa-2x"></em>
+                  <a class="nodecation normalcolor" href="./datastatistics_losstoday.html">
+                    <div class="panel widget">
+                      <div class="panel-body text-center">
+                        <div class="text-right text-muted">
+                          <em class="fa fa-star-half-o fa-2x"></em>
+                        </div>
+                        <h3 class="mt0">12</h3>
+                        <p class="text-muted">今日流失学员</p>
                       </div>
-                      <h3 class="mt0">12</h3>
-                      <p class="text-muted">人均学币获取</p>
                     </div>
-                  </div>
+                    <p class="text-center">
+                      <span class="text-danger">30天前过期且未续费的学员</span>
+                    </p>
+                  </a>
                 </div>
                 <div class="col-lg-3">
-                  <div class="panel widget">
-                    <div class="panel-body text-center">
-                      <div class="text-right text-muted">
-                        <em class="fa fa-star fa-2x"></em>
+                  <a class="nodecation normalcolor" href="./datastatistics_changetoday.html">
+                    <div class="panel widget">
+                      <div class="panel-body text-center">
+                        <div class="text-right text-muted">
+                          <em class="fa fa-star fa-2x"></em>
+                        </div>
+                        <h3 class="mt0">388</h3>
+                        <p class="text-muted">今日体验转化</p>
                       </div>
-                      <h3 class="mt0">388</h3>
-                      <p class="text-muted">总学币获取</p>
                     </div>
-                  </div>
+                    <p class="text-center">
+                      <span class="text-danger">体验账号今日完成续费</span>
+                    </p>
+                  </a>
                 </div>
 
               </div>
@@ -341,52 +378,76 @@
         <div class="row">
           <div class="col-lg-12">
             <div id="" class="panel panel-primary">
-              <div class="panel-heading">学况查询 </div>
+              <div class="panel-heading">续费查询 </div>
               <div class="panel-body">
-                <div class="col-lg-3 col-sm-6">
-                  <div class="panel widget">
-                    <div class="panel-body text-center">
-                      <div class="text-right text-muted">
-                        <em class="icon-user-unfollow fa-2x"></em>
-                      </div>
-                      <h3 class="mt0">33</h3>
-                      <p class="text-muted">未学人数</p>
-                    </div>
+                <div class="form-group col-sm-12">
+                  <label class="col-sm-2">查询期限：</label>
+                  <div class="col-sm-4">
+                    <select name="" id="" class="form-control">
+                      <option value="">三天</option>
+                      <option value="1">七天</option>
+                      <option value="2">三十天</option>
+                    </select>
                   </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                  <a class="nodecation normalcolor" href="./datastatistics_renew.html">
+                    <div class="panel widget">
+                      <div class="panel-body text-center">
+                        <div class="text-right text-muted">
+                          <em class="icon-user-unfollow fa-2x"></em>
+                        </div>
+                        <h3 class="mt0">33</h3>
+                        <p class="text-muted">续费学员</p>
+                      </div>
+                    </div>
+                  </a>
                 </div>
 
                 <div class="col-lg-3 col-sm-6">
-                  <div class="panel widget">
-                    <div class="panel-body text-center">
-                      <div class="text-right text-muted">
-                        <em class="icon-clock fa-2x"></em>
+                  <a class="nodecation normalcolor" href="./datastatistics_renewlength.html">
+                    <div class="panel widget">
+                      <div class="panel-body text-center">
+                        <div class="text-right text-muted">
+                          <em class="icon-clock fa-2x"></em>
+                        </div>
+                        <h3 class="mt0">888天</h3>
+                        <p class="text-muted">总续费时长</p>
                       </div>
-                      <h3 class="mt0">03:30:12</h3>
-                      <p class="text-muted">人均有效学习时长</p>
                     </div>
-                  </div>
+                  </a>
                 </div>
                 <div class="col-lg-3 col-sm-6">
-                  <div class="panel widget">
-                    <div class="panel-body text-center">
-                      <div class="text-right text-muted">
-                        <em class="fa fa-star-half-o fa-2x"></em>
+                  <a class="nodecation normalcolor" href="./datastatistics_loss.html">
+                    <div class="panel widget">
+                      <div class="panel-body text-center">
+                        <div class="text-right text-muted">
+                          <em class="fa fa-star-half-o fa-2x"></em>
+                        </div>
+                        <h3 class="mt0">12</h3>
+                        <p class="text-muted">流失学员</p>
                       </div>
-                      <h3 class="mt0">12</h3>
-                      <p class="text-muted">人均学币获取</p>
                     </div>
-                  </div>
+                    <p class="text-center">
+                      <span class="text-danger">30天前过期且未续费的学员</span>
+                    </p>
+                  </a>
                 </div>
                 <div class="col-lg-3">
-                  <div class="panel widget">
-                    <div class="panel-body text-center">
-                      <div class="text-right text-muted">
-                        <em class="fa fa-star fa-2x"></em>
+                  <a class="nodecation normalcolor" href="./datastatistics_change.html">
+                    <div class="panel widget">
+                      <div class="panel-body text-center">
+                        <div class="text-right text-muted">
+                          <em class="fa fa-star fa-2x"></em>
+                        </div>
+                        <h3 class="mt0">388（100%）</h3>
+                        <p class="text-muted">体验转化</p>
                       </div>
-                      <h3 class="mt0">388</h3>
-                      <p class="text-muted">总学币获取</p>
                     </div>
-                  </div>
+                    <p class="text-center">
+                      <span class="text-danger">体验账号今日完成续费</span>
+                    </p>
+                  </a>
                 </div>
 
               </div>
